# vfab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG_RELEASE.md  CHANGELOG_UPDATE_SUMMARY.md  DEVELOPMENT_STATUS.md  MANIFEST.in  PKGBUILD  PKGBUILD_FIX.md  PRD.md  QA_REPORT.md  QWEN.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  RELEASE_STATUS.md  RELEASE_TARGETS.md  STRATEGY.md  V0_9_0_COMPLETION_SUMMARY.md  alembic.ini  fix_workspace.sh  generate_api_docs.py  install_pyaxidraw.sh  performance_polish.py  pyproject.toml  security_audit.py  test_api_stability.py  test_cross_platform.py  test_database_performance.py  test_final_qa.py  test_fsm.py  test_guards.py  test_hooks.py  test_load.py  test_memory.py  test_memory_simple.py  ux_improvements.py
.github/docs-archive/: API_STABILITY_REPORT.md  ARCH_INSTALL_GUIDE.md  DEVELOPMENT_STATUS.md  PERFORMANCE_POLISH_REPORT.md  PKGBUILD_TEST.md  RELEASE_STATUS.md  SECURITY_AUDIT_REPORT.md  STRATEGY.md  UX_IMPROVEMENTS_REPORT.md  V0.6.0_STATUS.md  V0_9_0_COMMIT_SUMMARY.md  VERSION_FIX_SUMMARY.md  VERSION_HISTORY.md  test_coverage_analysis.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_add_statistics_tables.py
completions/bash/: plotty  vfab
completions/fish/: plotty.fish  vfab.fish
completions/zsh/: _plotty  _vfab
config/: config.yaml  vpype-presets.yaml
docs/: AXIDRAW_FIX.md  README.md  implementation.md  installation.md  logging.md  quickstart.md  troubleshooting.md  user-guide.md  vpype-plotty.md
docs/api/: DOCUMENTATION_SUMMARY.md  README.md  cli-reference.md  complete-api-reference.md  configuration-schema.md  core-classes.md  daemon-reference.md  database-models.md  examples-integration.md  index.md  job-lifecycle.md  websocket-monitoring.md
docs/cheat-sheets/: README.md
docs/completed/: axidraw_fix.md
docs/driver/: architecture.md  development.md
docs/requirements/: drivers.md  main.md  (+2 more)
output/: pen_mapping.json
packaging/: PKGBUILD  PKGBUILD_FIX_SUMMARY.md
plotty/: README.md
scripts/: generate_api_docs.py  install_pyaxidraw.sh  performance_polish.py  release.py  security_audit.py  test_api_stability.py  update_versions.py  ux_improvements.py  validate_release.py
src/: __init__.py  cli.py  config.py  estimation.py
systemd/: plottyd.service
tests/: test_add_job_enhanced.py  test_axidraw.py  test_backup_and_utilities.py  test_cli_basic.py  test_cli_basic.py.backup  test_cli_comprehensive.py  test_comprehensive.py  test_core_logic.py  test_core_logic_simple.py  test_core_simple.py  test_core_systems.py  test_cross_platform.py  test_database_performance.py  test_dynamic_driver_system.py  test_final_qa.py  test_fsm.py  test_fsm_basic.py  test_fsm_comprehensive.py  test_fsm_integration.py  test_fsm_unit.py  test_guard_implementations.py  test_guard_integration.py  test_guard_units.py  test_guards.py  test_hooks.py  test_integration.py  test_load.py  test_memory.py  test_memory_simple.py  test_performance.py  test_performance_framework.py  test_planner_comprehensive.py  test_plotting_comprehensive.py  test_recovery_comprehensive.py  test_smoke.py  test_utilities_basic.py  test_utils_comprehensive.py  test_websocket_fsm_integration.py  test_websocket_integration.py  test_xdg_config.py
(+232 files in other folders)
