[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "plotty"
version = "0.0.1"
description = "ploTTY: FSM plotter manager (headless-first) with vpype + per-session recording"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.9",
  "pyyaml>=6.0.2",
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.2",
]

[project.optional-dependencies]
vpype = ["vpype>=1.14.0"]
axidraw = ["pyaxidraw>=3.0.2"]
dev = ["pytest>=8.3.2", "pre-commit>=3.8.0", "ruff>=0.6.8", "black>=24.10.0"]

[project.scripts]
plotty = "plotty.cli:app"
plottyd = "plotty.daemon:main"

[tool.uv]
# optional but nice for consistency
default-groups = ["dev"]
