[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "plotty"
version = "0.0.1"
description = "ploTTY: FSM plotter manager (headless-first) with vpype + per-session recording"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.9",
  "pyyaml>=6.0.2",
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.2",
  "pyaxidraw>=3.9.6"
]

[project.optional-dependencies]
vpype = ["vpype>=1.14.0"]
# NOTE: EMS API is distributed as a zip; import name is `pyaxidraw`
axidraw = ["pyaxidraw @ https://cdn.evilmadscientist.com/dl/ad/public/AxiDraw_API.zip"]
dev = ["pytest>=8.3.2", "pre-commit>=3.8.0", "ruff>=0.6.8", "black>=24.10.0"]

[dependency-groups]
dev = ["pytest>=8.3.2", "pre-commit>=3.8.0", "ruff>=0.6.8", "black>=24.10.0"]
vpype = ["vpype>=1.14.0"]

[tool.uv]
default-groups = ["dev"]   # keep axidraw opt-in
